...
              BoxShadow.shadow2Xl,
              Borders.roundedT3Xl,
              Borders.border,
            ]}
          >
            <Text
              testID="upload_file_name"
              style={{
                color: Colors.zinc50,
                opacity: uploadFilename ? 1 : 0,
              }}
            >
              {t("label.filename")}: {uploadFilename}
...
