...
      <SectionHeader>{t("label.gigafileSettings")}</SectionHeader>
      <Section>
        <Text style={[{ color: Colors.blue1InIcon }, Typography.textXl]}>
          {t("label.retentionPeriod")}
        </Text>
        <Picker
          testID="duration_picker"
          itemStyle={{ color: Colors.blue1InIcon }}
          selectedValue={preserveDuration}
          onValueChange={catcher(handlePreserveDurationChange)}
        >
          <Picker.Item label={t("label.3days")} value="3" />
          <Picker.Item label={t("label.5days")} value="5" />
...
