appId: net.tai2.voicepost
---
- launchApp
- tapOn:
    text: Start recording
    retryTapIfNoChange: false
- assertVisible: "00:10"
- tapOn: Stop recording
- assertVisible: 00:00
- assertVisible: Play the recorded audio
- assertVisible: Rewind 15 seconds
- assertVisible: Advance 15 seconds
- tapOn:
    text: Play the recorded audio
    waitToSettleTimeoutMs: 3000
- extendedWaitUntil:
    visible: 00:05
    timeout: 5000
    optional: true
- tapOn:
    text: Stop the playback
    waitToSettleTimeoutMs: 3000
- copyTextFrom:
    id: "time_position"
- runScript: parse_time.js
- assertTrue: ${output.time > 0}
- tapOn: Rewind 15 seconds
- copyTextFrom:
    id: "time_position"
- runScript: parse_time.js
- assertTrue: ${output.time === 0}
- tapOn: Advance 15 seconds
- copyTextFrom:
    id: "time_position"
- runScript: parse_time.js
- assertTrue: ${output.time > 0}
