appId: net.tai2.voicepost
---
- clearState
- launchApp
- tapOn:
    text: Start recording
    retryTapIfNoChange: false
- assertNotVisible: Start recording
- tapOn: Stop recording
- assertNotVisible: Stop recording
- assertVisible: 00:00
- copyTextFrom:
    id: "time_duration"
- runScript: parse_time.js
- assertTrue: ${output.time > 0}
- assertVisible: "File name: recording_[0-9]{8}_[0-9]{6}.m4a"
- tapOn: Upload the recorded audio
- tapOn: Gigafile
- assertNotVisible: "https://46.gigafile.nu/.*" # for Android
- tapOn: Copy the URL of the uploaded audio
- assertNotVisible: Upload the recorded audio
