appId: net.tai2.voicepost
---
- launchApp
- assertNotVisible: Play the recorded audio
- tapOn:
    text: Start recording
    retryTapIfNoChange: false
- assertNotVisible: Play the recorded audio
- tapOn: Stop recording
- assertVisible: Play the recorded audio
- copyTextFrom:
    id: "upload_file_name"
- evalScript: ${output.upload_file_name1 = maestro.copiedText}
- tapOn:
    text: Start recording
    retryTapIfNoChange: false
- assertNotVisible: Play the recorded audio
- tapOn: Stop recording
- assertVisible: Play the recorded audio
- copyTextFrom:
    id: "upload_file_name"
- evalScript: ${output.upload_file_name2 = maestro.copiedText}
- assertTrue: ${output.upload_file_name1 !== output.upload_file_name2}