appId: net.tai2.voicepost
---
- clearState
- launchApp
- extendedWaitUntil:
    visible: Open settings
- tapOn: Open settings
- assertVisible: Settings
- assertVisible: Retention period
- assertVisible: 3 days
- assertNotVisible: 100 days
- runFlow: subflows/select_retention_period.yml
- runFlow: subflows/back.yml
- tapOn: Open settings
- assertVisible: 100 days
- assertNotVisible: 3 days
