appId: net.tai2.voicepost
---
- clearState
- launchApp:
    permissions:
      microphone: deny
- extendedWaitUntil:
    visible: Start recording
- tapOn: Start recording
- tapOn: (Don’t allow)|(DENY)
- tapOn: Start recording
- tapOn: (Don’t allow)|(DENY)
- tapOn: Start recording
- tapOn: Open
- tapOn: Permissions
- tapOn: Microphone
- tapOn: Allow only while using the app
- launchApp
- tapOn: Start recording
- assertVisible: Stop recording