appId: net.tai2.voicepost
---
- clearState
- launchApp
- extendedWaitUntil:
    visible: Start recording
- tapOn:
    text: Start recording
    retryTapIfNoChange: false
- assertNotVisible: Start recording
- tapOn: Stop recording
- assertNotVisible: Stop recording
- assertVisible: 00:00
- copyTextFrom:
    id: "time_duration"
- runScript: ../parse_time.js
- assertTrue: ${output.time > 0}
- assertVisible: "File name: recording_[0-9]{8}_[0-9]{6}.m4a"
- tapOn: Upload the recorded audio
- tapOn: Dropbox
- runFlow:
    when:
      platform: Android
    file: dropbox_oauth_android.yml
- runFlow:
    when:
      platform: iOS
    file: dropbox_oauth_ios.yml
- assertNotVisible: "https://www.dropbox.com.*" # for Android
- tapOn: Copy the URL of the uploaded audio
- assertNotVisible: Upload the recorded audio
