appId: net.tai2.voicepost
---
- runFlow:
    when:
      platform: iOS
    commands:
      - swipe:
          from:
            id: "duration_picker"
          direction: UP
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: 3 days
      - tapOn: 100 days