appId: net.tai2.voicepost
---
- clearState
- launchApp
- tapOn: 設定画面を開く
- tapOn: ギガファイル便
- runFlow: subflows/back.yml
- tapOn:
    text: 録音を開始する
    retryTapIfNoChange: false
- assertNotVisible: 録音を開始する
- tapOn: 録音を停止する
- tapOn: 録音した音源をアップロードする
- assertNotVisible: ギガファイル便
- assertVisible: コピー
