appId: net.tai2.voicepost
---
- launchApp
- tapOn:
    text: 録音を開始する
    retryTapIfNoChange: false
- assertNotVisible: 録音を開始する
- tapOn: 録音を停止する
- assertNotVisible: 録音を停止する
- assertVisible: 00:00
- copyTextFrom:
    id: "time_duration"
- runScript: parse_time.js
- assertTrue: ${output.time > 0}
- assertVisible: "ファイル名: recording_[0-9]{8}_[0-9]{6}.m4a"
- tapOn: 録音した音源をアップロードする
- assertNotVisible: "https://46.gigafile.nu/.*" # for Android
- tapOn: アップロードした音源のURLをコピーする
- assertNotVisible: 録音した音源をアップロードする
